--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
     <string name="true_button">TRUE</string>
     <string name="false_button">FALSE</string>
-    <string name="next_button">Next Question</string>
+    <string name="next_button">Next</string>
+    <string name="previous_button">Prev</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
 </resources>
